# ATP_Re

./: .env.example  .gitignore  API_README.md  BACKUP_RESTORE.md  DECODER_VALIDATION.md  DEPLOYMENT_GUIDE.md  Dockerfile.api  Dockerfile.ui  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  INTERACTIVE_CHART_ANALYSIS_PLANNING.md  ISSUE_RESPONSE.md  PROJECT_STATUS.md  PROJECT_STATUS_EN.md  README.md  SECURITY_SUMMARY.md  STAGE1_SUMMARY.md  STAGE5_QUICKSTART.md  STANDALONE_FAQ.md  STANDALONE_IMPLEMENTATION_SUMMARY.md  STANDALONE_INSTALLATION_GUIDE.md  STANDALONE_LICENSES.md  STANDALONE_TROUBLESHOOTING.md  STANDALONE_USER_MANUAL.md  STANDALONE_VERSION_PLAN.md  STATUS_BADGES.md  TEST_README.md  TROUBLESHOOTING.md  UI_UX_SPECIFICATION.md  UI_UX_VISUAL_EXAMPLES.md  accidentFrame.java  api_backend.spec  build_macos.sh  build_windows.bat  decode_test_files.py  dlgVehicleIDEdit.java  docker-compose.yml  examplePanel.java  (+36 more)
Tools_re/: BackupDeleteFrame.java  PasswordInputDialog.java
analysis_re/: API_Documentation.md  AnalysisAPI.java  AnalysisAPIImpl.java  AnalysisTest.java  EventDetector.java  ParkingAccuracyAnalyzer.java  SUMMARY.md  SpeedAnalyzer.java  StatisticalSummary.java  Web_Integration_Guide.md
api/: main.py
atp_analysis/: .coverage  .gitignore  PHASE1_COMPLETION.md  README.md  pyproject.toml  requirements.txt
atp_analysis/src/: __init__.py
atp_analysis/src/decoder/: __init__.py  btm_decoder.py  mmi_decoder.py  packet_header_parser.py
atp_analysis/src/models/: __init__.py  atp_records.py
atp_analysis/tests/: __init__.py  test_btm_decoder.py  test_mmi_decoder.py  test_packet_header_parser.py
config/: prometheus.yml  settings.py
connect_re/: ConnectFTP.java
core/: README.md  __init__.py  logging_config.py  monitoring.py  performance.py
decode_re/: Decoder.java  Frame1.java  PacketMMI.java  RU.java
decoder_re/: BTMDecoder.java  HeadDecoder.java  RU.java  RUDecoder.java  (+2 more)
(+370 files in other folders)
